--- a/kooplexhub/kooplex/hub/templates/publish/publishform.html
+++ b/kooplexhub/kooplex/hub/templates/publish/publishform.html
@@ -24,6 +24,7 @@
           <hr>
           <ul class="nav nav-tabs">
               <li class="active"><a href="#pane_desc" data-toggle="tab">Description</a></li>
+              <li><a href="#pane_files" data-toggle="tab">Attach files</a></li>
               <li><a href="#pane_passwdNscope" data-toggle="tab">Password and scope</a></li>
               <li><a href="#pane_unpublish" data-toggle="tab">Unpublish</a></li>
           </ul>
@@ -31,6 +32,24 @@
               <div id="pane_desc" class="tab-pane fade in active">
                 <strong>Name of the report:</strong> <input type="text" name="report_name" /><br>
                 <strong>Description:</strong> <textarea rows="6" cols="100" id="report_description" name="report_description"></textarea>
+              </div>
+              <div id="pane_files" class="tab-pane fade">
+                {% if files %}
+                Select those files to be attached to your report:
+                <div class="form-group">
+                  {% for file in files %}
+                     <input type="checkbox" name="other_files" value="{{ file }}">
+                     {% if file.is_dir %}
+                     <span class="glyphicon glyphicon-folder-open">
+                     {% else %}
+                     <span class="glyphicon glyphicon-file">
+                     {% endif %}
+                     {{ file.filename }} ({{ file.volume }})</span><br>
+                  {% endfor %}
+                </div>
+                {% else %}
+                <div class="alert alert-warning" role="alert">There are no files you can attach.</div>
+                {% endif %}
               </div>
               <div id="pane_passwdNscope" class="tab-pane fade">
                 <strong>Password:</strong> <input type="text" class="form-control" id="password" name="password" placeholder="Leave blank toyield unrestricted access" /><br>
@@ -52,31 +71,13 @@
               </div>
           </div>   <!-- tab-content -->
 
-          {% if other_files %}
-          <hr>
-
-
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#pane_otherfiles" data-toggle="tab">Select those files to be attached to your report:</a></li>
-            </ul>
-            <div class="tab-content">
-                <div id="pane_otherfiles" class="tab-pane fade in active">
-                <div class="form-group">
-                  {% for item in other_files %}
-                     <input type="checkbox" name="other_files" value="{{ item }}"> {{ item }}<br>
-                  {% endfor %}
-                </div>
-                </div>
-            </div>   <!-- tab-content -->
-
-          </div>
-          {% endif %}
           <div class="well">
             <ul>
               <li>The url to the <strong>latest report:</strong> <code>{{ base_url }}{% url 'report-openlatest' %}?project_id={{ project_id }}&amp;filename=<strong>your_chosen_file</strong></code>
               <li>The filename in the url should not contain any filename extension.
               <li>If no <strong>Name</strong> is provided for the report, it is automatically generated from the noteboook's filename.
               <li>Public reports can be protected by a password if you provide one under the <strong>Password</strong> tab.
+              <li>File attachments are deployed only with dashboard reports.
             </ul>
           </div>
 
