--- a/kooplexhub/kooplex/hub/templates/project/settings.html
+++ b/kooplexhub/kooplex/hub/templates/project/settings.html
@@ -9,7 +9,8 @@
         <ul class="nav nav-tabs">
           <li class="active"><a href="#pane_collaboration-{{ project.id }}" data-toggle="tab">Collaboration</a></li>
           <li><a href="#pane_image-{{ project.id }}" data-toggle="tab">Image</a></li>
-          <li><a href="#pane_volume-{{ project.id }}" data-toggle="tab">Storage and volumes</a></li>
+          <li><a href="#pane_funvolume-{{ project.id }}" data-toggle="tab">Module volumes</a></li>
+          <li><a href="#pane_stgvolume-{{ project.id }}" data-toggle="tab">Storage volumes</a></li>
           <li><a href="#pane_scope-{{ project.id }}" data-toggle="tab">Scope</a></li>
           <li><a href="#pane_deletion-{{ project.id }}" data-toggle="tab">Deletion</a></li>
         </ul>
@@ -24,8 +25,11 @@
           <div id="pane_image-{{ project.id }}" class="tab-pane fade">
             {% include 'project/pane-image.html' %}
           </div>
-          <div id="pane_volume-{{ project.id }}" class="tab-pane fade">
-            {% include 'project/pane-volume.html' %}
+          <div id="pane_funvolume-{{ project.id }}" class="tab-pane fade">
+            {% include 'project/pane-functionalvolume.html' %}
+          </div>
+          <div id="pane_stgvolume-{{ project.id }}" class="tab-pane fade">
+            {% include 'project/pane-storagevolume.html' %}
           </div>
           <div id="pane_scope-{{ project.id }}" class="tab-pane fade">
             {% include 'project/pane-scope.html' %}
