--- a/kooplexhub/kooplex/hub/templates/project/projects.html
+++ b/kooplexhub/kooplex/hub/templates/project/projects.html
@@ -20,13 +20,13 @@
         <ul class="nav navbar-nav">
             <li class="active" ><a href="#myprojects" data-toggle="tab">My projects</a></li>
             <li><a href="#otherprojects" data-toggle="tab">Public projects</a></li>
+            <li><a href="#newproject" data-toggle="tab">New project</a></li>
         </ul>
       </div>            <!-- /.navbar-collapse -->
     </div>              <!-- /.container-fluid -->
   </nav>
 </div>                  <!-- row -->
 
-{% include 'project/new.html' %}
 {% comment %}
 #FIXME:
 {% include 'app/about.html' %}
@@ -42,7 +42,6 @@
 
 <div class="tab-content">
   <div id="myprojects" class="tab-pane fade in active">
-
         {% for project in projects_mine %}
           <div class="row">
             {% include 'project/project-partial.html' with publicvar=False %}
@@ -53,17 +52,16 @@
             {% include 'project/project-partial.html' with publicvar=False %}
           </div>
         {% endfor %}
-
-
   </div>
   <div id="otherprojects" class="tab-pane fade">
-
         {% for project in projects_public %}
           <div class="row">
             {% include 'project/project-partial.html' with publicvar=True %}
           </div>
         {% endfor %}
-
+  </div>
+  <div id="newproject" class="tab-pane fade">
+     {% include 'project/new.html' %}
   </div>
 </div><!-- /.tab-content -->
 
