--- a/kooplexhub/kooplex/hub/templates/project/pane-functionalvolume.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-functionalvolume.html
@@ -17,12 +17,12 @@
 
 <div class="panel panel-success">
   <div class="panel-heading">
-    <a data-toggle="collapse"  href="#collapse-help-funvol" style="text-decoration: none; color: gray">
+    <a data-toggle="collapse"  href="#collapse-help-funvol-{{ project.id }}" style="text-decoration: none; color: gray">
       <span class="glyphicon  glyphicon-question-sign"></span> Help <span
       class="glyphicon glyphicon-option-horizontal"></span>
     </a>
   </div>
-  <div id="collapse-help-funvol" class="panel-collapse collapse">
+  <div id="collapse-help-funvol-{{ project.id }}" class="panel-collapse collapse">
     <div class="panel-body">
       <strong>Volumes </strong>contain installed conda environments, python and other packages.
       <ul>
