--- a/kooplexhub/kooplex/hub/templates/project/pane-scope.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-scope.html
@@ -1,25 +1,29 @@
 <label>Change project's scope</label><br>
-#FIXME
-{% if item.scope == "private" %}
-    <button type="submit" class="btn btn-danger" name="button" value="makepublic">Make it public</button>
-{% endif %}
-{% if item.scope == "public" %}
-    <button type="submit" class="btn btn-danger" name="button" value="makeprivate">Make it private</button>
-{% endif %}
 
-<br>
+<p>The current scope of project {{ project }} is {{ project.scope }}</p>
+
+<select id="project_scope-{{ project.id }}" name="project_scope-{{ project.id }}">
+  {% for scope in scopes %}
+    <option value="{{ scope }}" {% if project.scope = scope %} selected {% endif %}>{{ scope }}</option>
+  {% endfor %}
+</select>
+
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
-    <a data-toggle="collapse"  href="#collapse-help-scope" style="text-decoration: none; color: gray">
+    <a data-toggle="collapse"  href="#collapse-help-scope-{{ project.id }}" style="text-decoration: none; color: gray">
       <span class="glyphicon  glyphicon-question-sign"></span> Help <span
       class="glyphicon glyphicon-option-horizontal"></span>
     </a>
   </div>
-<div id="collapse-help-scope" class="panel-collapse collapse">
-  <div class="panel-body">
-    <strong>Scope</strong> defines whether the project is accessible only for
-    you and the project members or also for anyone else
+  <div id="collapse-help-scope-{{ project.id }}" class="panel-collapse collapse">
+    <div class="panel-body">
+      <strong>Scope</strong> defines who can access this project
+      <ul>
+        <li><strong>private</strong> project is just yours,
+        <li><strong>internal</strong> project is TBD,
+        <li><strong>public</strong> project can be accessed by everybody.
+      </ul>
+    </div>
   </div>
-</div>
 </div>
