--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -10,23 +10,31 @@
 <div class="panel panel-default ">
 {% endif %}
   <div class="panel-heading">
-    <a href="{% url 'report-open' %}?report_id={{ report_latest.id }}" target="_blank">
-      <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"> </span> Open</button>
-    </a>
-    <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
-      <span style="padding-left:20px;"> 
-        <strong>{{ report_latest.name  }}</strong>
-      </span>
-      <span style="padding-left:20px">
-        project name: <strong style="text-transform: uppercase;">{{ project.name }}</strong>,
-        filename: <strong>{{ report_latest.filename_wo_ext }}</strong>,
-        published on: <strong>{{ report_latest.pretty_ts }}</strong>
-        {% if not user_can_set %}
-        by {{ report_latest.creator.username }}
-        {% endif %}
-      </span>
-      <span class="badge" style="float: inline-end;">{{ report_latest.displaytype }}</span>
-    </a>
+     <div class="row">
+         <div class="col-md-1 col-sm-2">
+            <a href="{% url 'report-open' %}?report_id={{ report_latest.id }}" target="_blank">
+              <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"> </span> Open</button>
+            </a>
+         </div>
+
+         <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
+            <div class="col-md-11 col-sm-10">
+              <span style="padding-left:20px;">
+                <strong>{{ report_latest.name  }}</strong>
+              </span>
+              <span style="padding-left:20px">
+                project name: <strong style="text-transform: uppercase;">{{ project.name }}</strong>,
+                filename: <strong>{{ report_latest.filename_wo_ext }}</strong>,
+                published on: <strong>{{ report_latest.pretty_ts }}</strong>
+                {% if not user_can_set %}
+                by {{ report_latest.creator.username }}
+                {% endif %}
+              </span>
+              <span class="badge" style="float: right;">{{ report_latest.displaytype }}</span>
+            </div>
+         </a>
+
+    </div>
   </div>
   <div id="collapse{{ report_latest.id }}{{ pane }}" class="panel-collapse collapse">
     <div class="panel-body">
