--- a/kooplexhub/kooplex/hub/templates/project/pane-collaboration.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-collaboration.html
@@ -9,7 +9,7 @@
         {% if project.owner != user %}
         <div class="row">
            <div class="col-md-1">
-             <input type="checkbox" name="user_id[{{ user.gitlab_id }}]" value="True" {% if user in project.collaborators %}checked{% endif %}>
+             <input type="checkbox" name="collaborators" value="{{ user.id }}" {% if user in project.collaborators %}checked{% endif %}>
            </div>
            <div class="col-md-4" data-toggle="tooltip" title="Username: {{ user.username }}" data-placement="right" data-html="true">
              {{ user.first_name }} {{ user.last_name }}
