--- a/kooplexhub/kooplex/hub/templates/project/pane-image.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-image.html
@@ -1,9 +1,9 @@
 <p>The current image for project {{ project.name }} is <strong>{{ project.image }}</strong>.</p>
 
 <label>Your choice for the new image:</label>
-<select id="project_images-{{ project.id }}" name="project_image-{{ project.id }}">
+<select id="project_images-{{ project.id }}" name="project_image">
   {% for image in images %}
-    <option value="{{ image }}" {% if project.image = image %} selected {% endif %}>{{ image }}</option>
+    <option value="{{ image.name }}" {% if project.image = image %} selected {% endif %}>{{ image }}</option>
   {% endfor %}
 </select>
 {% if project in running %}
