--- a/kooplexhub/kooplex/hub/templates/project/gitform.html
+++ b/kooplexhub/kooplex/hub/templates/project/gitform.html
@@ -9,13 +9,13 @@
 </ul>
 <div class="tab-content">
   <div id="pane_commit" class="tab-pane fade in active">
-    {% include 'app/notebooks-commitform.html' %}
+    {% include 'project/commitform.html' %}
   </div>
   <div id="pane_update" class="tab-pane fade">
-    {% include 'app/notebooks-updateform.html' %}
+    {% include 'project/updateform.html' %}
   </div>
   <div id="pane_revert" class="tab-pane fade">
-    {% include 'app/notebooks-revertform.html' %}
+    {% include 'project/revertform.html' %}
   </div>
 </div>   <!-- tab-content -->
 
