--- a/kooplexhub/kooplex/hub/templates/project/revertform.html
+++ b/kooplexhub/kooplex/hub/templates/project/revertform.html
@@ -1,4 +1,4 @@
-<form action="{% url 'project-commit' %}" method="post" class="form-horizontal">
+<form action="{% url 'project-revert' %}" method="post" class="form-horizontal">
   {% csrf_token %}
   <div class="panel-heading">
     <h4>Restore your project <strong>{{ project.name }}</strong> to a former state</h4>
@@ -24,8 +24,8 @@ git push
       </code>
     </div>    <!-- panel.body -->
     <div class="panel-footer">
-      <input type="submit" name="revert" value="Revert" class="btn btn-primary" />
-      <input type="submit" name="cancel" value="Cancel" class="btn btn-secondary" />
+      <input type="submit" name="button" value="Revert" class="btn btn-primary" />
+      <input type="submit" name="button" value="Cancel" class="btn btn-secondary" />
     </div>
   {% endif %}
 </form>
