--- a/kooplexhub/kooplex/hub/templates/report/reports.html
+++ b/kooplexhub/kooplex/hub/templates/report/reports.html
@@ -32,7 +32,9 @@
 </div>
 </div>
 
-{% include 'app/about.html' %}
+{% if messages %}
+  {% include 'message.html' %}
+{% endif %}
 
  <div class="tab-content">
 
