--- a/kooplexhub/kooplex/hub/templates/project/commitform.html
+++ b/kooplexhub/kooplex/hub/templates/project/commitform.html
@@ -23,21 +23,23 @@
       <label>Your commit message:</label>
       <input id="id_message" type="text" name="message" value="Update the project file(s)">
       <input type="hidden" name="project_id" value="{{ project.id }}" />
-      <hr>
-      <p>In your favour the following commands are issued in the project folder:</p> 
-      <code> 
+      <div class="alert alert-info">
+        <p>In your favour the following commands are issued in the project folder:</p>
+        <hr>
+        <code> 
 git add &lt;names of modified and added files&gt;<br>
 git rm &lt;names of deleted files&gt; .<br>
 git commmit -m '&lt;your commit message&gt;'<br>
 git push
-      </code>
+        </code>
+      </div>
     </div>   <!-- panel-body -->
     <div class="panel-footer" style="text-align: left;">
       <input type="submit" name="button" value="Commit and push" class="btn btn-primary" />
       <input type="submit" name="button" value="Cancel" class="btn btn-secondary" />
     </div>   <!-- panel-footer -->
    {% else %}
-     <p>You have nothing to commit yet.</p>
+     <div class="alert alert-warning">You have nothing to commit yet.</div>
    {% endif %}
 </form>
 
