fix rendering report when user is not authenticated

--- a/kooplexhub/kooplex/hub/templates/report/reports.html
+++ b/kooplexhub/kooplex/hub/templates/report/reports.html
@@ -18,10 +18,10 @@
               <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Stop all Report Servers</button>
             </a>
         {% endif %}
-          {% if user %}
-                <li class="active" ><a href="#myreports" data-toggle="tab">My reports</a></li>
-                <li><a href="#internalreports" data-toggle="tab">Internal reports</a></li>
-                <li><a href="#publicreports" data-toggle="tab" >Public reports</a></li>
+          {% if user.is_autenticated %}
+              <li class="active" ><a href="#myreports" data-toggle="tab">My reports</a></li>
+              <li><a href="#internalreports" data-toggle="tab">Internal reports</a></li>
+              <li><a href="#publicreports" data-toggle="tab" >Public reports</a></li>
           {% else %}
               <li class="active"><a href="#publicreports" data-toggle="tab" >Public reports</a></li>
           {% endif %}
@@ -57,7 +57,7 @@
          </div>
        {% endfor %}
      </div>
-     {% if user %}
+     {% if user.is_authenticated %}
      <div id="publicreports" class="tab-pane fade">
      {% else %}
      <div id="publicreports" class="tab-pane fade in active">
