report openlatest works

--- a/kooplexhub/kooplex/hub/templates/publish/publishform.html
+++ b/kooplexhub/kooplex/hub/templates/publish/publishform.html
@@ -73,9 +73,9 @@
 
           <div class="well">
             <ul>
-              <li>The url to the <strong>latest report:</strong> <code>{{ base_url }}{% url 'report-openlatest' %}?project_id={{ project_id }}&amp;filename=<strong>your_chosen_file</strong></code>
-              <li>The filename in the url should not contain any filename extension.
+              <li>The url to the <strong>latest report:</strong> <code>{{ base_url }}{% url 'report-openlatest' %}?project_id={{ project_id }}&amp;name=<strong>reportname</strong></code>
               <li>If no <strong>Name</strong> is provided for the report, it is automatically generated from the noteboook's filename.
+              <li>The reportname in the url should not contain any filename extension.
               <li>Public reports can be protected by a password if you provide one under the <strong>Password</strong> tab.
               <li>File attachments are deployed only with dashboard reports.
             </ul>
