--- a/kooplexhub/kooplex/hub/static/app/content/site.css
+++ b/kooplexhub/kooplex/hub/static/app/content/site.css
@@ -40,3 +40,13 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.form-horizontal .form-group {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.modal-dialog {
+    width: 50%;
+    min-width: 700px;
+}
