--- a/kooplexhub/kooplex/hub/templates/project/commitform.html
+++ b/kooplexhub/kooplex/hub/templates/project/commitform.html
@@ -1,4 +1,5 @@
-<form action="{% url 'project-commit' %}" method="post" class="form-horizontal">
+<div class="modal-content">
+    <form action="{% url 'project-commit' %}" method="post" class="form-horizontal">
   {% csrf_token %}
   <div class="panel-heading">
     <h4>Commit changes for project <strong>{{ project.name }}</strong></h4>
@@ -42,4 +43,5 @@ git push
      <div class="alert alert-warning">You have nothing to commit yet.</div>
    {% endif %}
 </form>
+</div>
 
