--- a/kooplexhub/kooplex/hub/templates/publish/publishform.html
+++ b/kooplexhub/kooplex/hub/templates/publish/publishform.html
@@ -1,13 +1,13 @@
 {% extends "app/layout.html" %}
 {% block content %}
+<div class="modal-content">
+<div>
 
-<div class="row">
-  <div class=" col-md-10 col-sm-10 col-xs-12">
     <div class="panel panel-default ">
       <div class="panel-heading">
         <h4>Publish your work</h4>
       </div>    <!-- heading -->
-      <div class="panel-body">
+      <div class="panel-body" style="padding-left: 30px;">
         <p>Notebooks can be published as static (html) or as interactive (dashboard) documents. These documents are available at the
            <a href="{% url 'reports' %}" target="_blank" >Reports</a> section.
         </p>
@@ -82,7 +82,7 @@
           </div>
 
           <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div>
                  <input type="hidden" name="project_id" value="{{ project_id }}" />
                  <input type="hidden" id="reports2remove" name="reports2remove" value="" />
                  <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
@@ -96,8 +96,8 @@
         {% endif %}
       </div>         <!-- panel-body -->
     </div>           <!-- panel -->
-  </div>             <!-- col -->
 </div>               <!-- row -->
+</div>
 
 <script>
 function empty() {
