--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -49,7 +49,7 @@
         <form action="{% url 'report-open' %}" method="post">
           {% csrf_token %}
           <label>Former reports</label>
-          <select name='report_id' id='report_id{{ project.id }}' style="max-width: 800px;">
+          <select name='report_key' id='report_key-{{ project.id }}-{{ key.1 }}' style="max-width: 800px;">
         {% for r in reports %}
           <option value="{{ r.id }}"
             {% if r.displaytype == "Dashboard report" %} style="background-color: lightgreen;" {% endif %}
@@ -58,8 +58,8 @@
         {% endfor %}
           </select>
           <button type="submit" class="btn btn-info" data-toggle="tooltip" title="Open a former report" data-placement="top"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button>
-      {% if pane == 'mine' %}
-          <button type="button" class="btn btn-info" data-toggle="tooltip" title="Report settings" data-placement="top" onclick="settings({{ project.id }});"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></button>
+      {% if user_can_set %}
+          <button type="button" class="btn btn-info" data-toggle="tooltip" title="Report settings" data-placement="top" onclick="settings('report_key-{{ project.id }}-{{ key.1 }}');"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></button>
       {% endif  %}
         </form>
       </div>    <!-- projects -->
@@ -69,9 +69,9 @@
 </div>        <!-- panel -->
 
 <script type="text/javascript">
-function settings(project_id) {
+function settings(key) {
   var report_id;
-  report_id = document.getElementById('report_id' + project_id).value;
+  report_id = document.getElementById(key).value;
   $('#report-settings-' + report_id).modal('show');
 }
 </script>
